--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,10 +1,11 @@
-<div class="-container py-5">
+<div class="container py-5">
   <div class="row">
     <div class="col-12 col-md-6 offset-lg-3">
       <div class="bg-white rounded p-3 shadow">
         <h3>Crear una nueva lista</h3>
         <%= simple_form_for @list do |f| %>
           <%= f.input :name, placeholder: 'Acción' %>
+          <%= f.input :photos, as: :file, input_html: { multiple: true } %>
           <%= f.submit class: 'btn btn-flat' %>
         <% end %>
       </div>
